--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
     <link rel="stylesheet" href="./css/custom.css"/>
   </head>
   <body>
-    <div class="container"></div>
+    <div id="main" class="container"></div>
   </body>
 </html>
